--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@ target/
 ### MVN ###
 /**/mvnw
 /**/mvnw.cmd
-/**/.mvn/**
-
+**/.mvn/**
 
 ### STS ###
 .apt_generated
@@ -37,5 +36,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
 
 
