--- a/lock/pom.xml
+++ b/lock/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>org.jcm</groupId>
         <artifactId>lock-parent</artifactId>
-        <version>0.0.3-SNAPSHOT</version>
+        <version>0.0.5</version>
     </parent>
     <artifactId>lock</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.5</version>
     <name>lock</name>
     <description>Demo project for Spring Boot</description>
 
