完成对象锁

--- a/starter-lock/pom.xml
+++ b/starter-lock/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.jcm</groupId>
             <artifactId>lock</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.5</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
