--- a/lock/pom.xml
+++ b/lock/pom.xml
@@ -29,10 +29,17 @@
         </dependency>
         <dependency>
             <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.12.5</version>
+        </dependency>
+        <!--
+        <dependency>
+            <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.12.5</version>
             <scope>compile</scope>
         </dependency>
+        -->
     </dependencies>
 
 
