--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
     <groupId>org.jcm</groupId>
     <artifactId>lock-parent</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.6</version>
     <name>lock-parent</name>
     <description>锁相关的父项目</description>
 
@@ -44,7 +44,7 @@
         </dependency>
     </dependencies>
 
-    <!--<distributionManagement>
+    <distributionManagement>
         <repository>
             <id>lenovo-release</id>
             <name>lenovo release</name>
@@ -55,6 +55,6 @@
             <name>lenovo snapshot</name>
             <url>http://nexus.xiqu.servicetest.lenovo/repository/maven-snapshots/</url>
         </snapshotRepository>
-    </distributionManagement>-->
+    </distributionManagement>
 
 </project>
